# stormdl

./: .claude-tasks.md  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  product.md
.github/workflows/: ci.yml  release.yml
config/: default.toml
crates/storm-bandwidth/: Cargo.toml
crates/storm-bandwidth/src/: lib.rs  limiter.rs  monitor.rs  scheduler.rs
crates/storm-core/: Cargo.toml
crates/storm-core/src/: error.rs  lib.rs  mirror.rs  traits.rs  types.rs
crates/storm-gui/: Cargo.toml
crates/storm-gui/src/: app.rs  lib.rs  state.rs  theme.rs
crates/storm-gui/src/components/: mod.rs  segmented_progress.rs
crates/storm-gui/src/views/: download_list.rs  main_window.rs  mod.rs
crates/storm-integrity/: Cargo.toml
crates/storm-integrity/src/: hasher.rs  lib.rs  verify.rs
crates/storm-io/: Cargo.toml
crates/storm-io/src/: coalesce.rs  iocp.rs  kqueue.rs  lib.rs  uring.rs
crates/storm-manifest/: Cargo.toml
crates/storm-manifest/src/: db.rs  lib.rs
crates/storm-protocol/: Cargo.toml
crates/storm-protocol/src/: h3.rs  http.rs  lib.rs  negotiation.rs  pool.rs
crates/storm-segment/: Cargo.toml
crates/storm-segment/src/: controller.rs  lib.rs  manager.rs  multi_source.rs  rebalancer.rs  splitter.rs
packaging/alpine/: APKBUILD
packaging/arch/: PKGBUILD
packaging/debian/: control
packaging/homebrew/: stormdl.rb
packaging/rpm/: stormdl.spec
scripts/: benchmark.sh  install.sh  uninstall.sh
src/: cli.rs  main.rs  orchestrator.rs
