[workspace]
resolver = "2"
members = [
    "crates/storm-core",
    "crates/storm-segment",
    "crates/storm-protocol",
    "crates/storm-io",
    "crates/storm-integrity",
    "crates/storm-manifest",
    "crates/storm-bandwidth",
    "crates/storm-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Augustus Otu"]
repository = "https://github.com/augani/stormdl"

[workspace.dependencies]
storm-core = { path = "crates/storm-core" }
storm-segment = { path = "crates/storm-segment" }
storm-protocol = { path = "crates/storm-protocol" }
storm-io = { path = "crates/storm-io" }
storm-integrity = { path = "crates/storm-integrity" }
storm-manifest = { path = "crates/storm-manifest" }
storm-bandwidth = { path = "crates/storm-bandwidth" }
storm-gui = { path = "crates/storm-gui" }

tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
bytes = "1.9"
flume = "0.11"
futures-util = "0.3"

reqwest = { version = "0.12", features = ["stream", "rustls-tls-native-roots", "http2"] }
urlencoding = "2.1"
hyper = { version = "1.6", features = ["full"] }
rustls = "0.23"
hickory-resolver = "0.25"

quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"

blake3 = "1.5"
rusqlite = { version = "0.32", features = ["bundled"] }
governor = "0.8"

gpui = "0.2"
adabraka-ui = "0.2"

clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

dirs = "5.0"
chrono = "0.4"
bytesize = "1.3"
smallvec = "1.13"
parking_lot = "0.12"

[package]
name = "stormdl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "storm"
path = "src/main.rs"

[dependencies]
storm-core.workspace = true
storm-segment.workspace = true
storm-protocol.workspace = true
storm-io.workspace = true
storm-integrity.workspace = true
storm-manifest.workspace = true
storm-bandwidth.workspace = true
storm-gui = { workspace = true, optional = true }

tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
flume.workspace = true
clap.workspace = true
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
dirs.workspace = true
bytes.workspace = true
parking_lot.workspace = true

[features]
default = ["tui"]
gui = ["dep:storm-gui"]
tui = ["dep:ratatui", "dep:crossterm"]

[package.metadata.deb]
maintainer = "Augustus Otu <augustus@example.com>"
copyright = "2024, Augustus Otu"
license-file = ["LICENSE", "0"]
extended-description = """StormDL is a next-generation download accelerator that uses
adaptive multi-segment parallel downloads to saturate available bandwidth.
Supports HTTP/1.1, HTTP/2, HTTP/3 (QUIC), and FTP protocols."""
section = "net"
priority = "optional"
assets = [
    ["target/release/storm", "usr/bin/", "755"],
    ["config/default.toml", "etc/storm-dl/config.toml", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/storm", dest = "/usr/bin/storm", mode = "755" },
    { source = "config/default.toml", dest = "/etc/storm-dl/config.toml", mode = "644", config = true },
]

[package.metadata.generate-rpm.requires]
openssl = "*"
