[package]
name = "stormdl-bandwidth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rate limiting, scheduling, and network monitoring"

[dependencies]
stormdl-core.workspace = true
tokio.workspace = true
governor.workspace = true
tracing.workspace = true
parking_lot.workspace = true
