[package]
name = "stormdl-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPUI + Adabraka UI application"

[dependencies]
stormdl-core.workspace = true
gpui.workspace = true
adabraka-ui.workspace = true
flume.workspace = true
smallvec.workspace = true
tracing.workspace = true
url.workspace = true
bytesize.workspace = true
dirs.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-text.workspace = true
