[package]
name = "storm-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite-based download state persistence"

[dependencies]
storm-core.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
