[package]
name = "stormdl-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite-based download state persistence"

[dependencies]
stormdl-core.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
