[package]
name = "stormdl-segment"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Segment manager with adaptive splitting algorithm"

[dependencies]
stormdl-core.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
url.workspace = true
